config/sqlinjection.yml
apiVersion: v1
kind: Pod
metadata:
  name: sqlinjection
  labels:
    group: rkalyana-public
    app: sqlinjection
spec:
  containers:
  - name: sqlinjection
    image: rkalyana/sqlinjection
    ports:
    - containerPort: 8888
