config/service-sqlinjection.yml
kind: Service
apiVersion: v1
metadata:
  name: service-sqlinjection
  labels:
    group: rkalyana-public
spec:
  type: NodePort
  ports:
  - name: jupyter
    port: 8888
    protocol: TCP
  selector:
    app: sqlinjection
